--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body{
 .timer{
     text-align: center;
     font-size: 70px;
-    color: green;
+    color: white;
     margin-bottom: 15px;
 }
 .btns{
