--- a/style.css
+++ b/style.css
@@ -52,3 +52,35 @@ body{
     cursor: pointer;
     border-radius: 15px;
 }
+
+
+@media  screen and (max-width: 500px){
+    .main-container{
+        width: 240px;
+        height:  240px;
+        padding: 25px;
+        top: 40%;
+        left: 40%;
+        transform: translate(-40%,-40%);
+    }
+    .button-icon{
+        height: 35px;
+        width: 35px;
+    }
+    .button-icon-onoff{
+        height: 40px;
+        width: 40px;
+    }
+    .Head{
+        text-align: center;
+        font-size: 40px;
+        color: yellow;
+        margin-bottom: 10px;
+    }
+    .sub-container{
+        margin-top: 25px;
+    }
+    .timer{
+        font-size: 50px;
+    }
+}
